// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`automatically dispatch action object returned from thunk: 1 - response 1`] = `
Object {
  "type": "FOO",
}
`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - SECOND - onComplete 1`] = `1`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`automatically dispatch action object returned from thunk: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "FOO",
}
`;

exports[`automatically dispatch action object returned from thunk: 1 - title 1`] = `"SECOND"`;

exports[`automatically infer non action object to be payload: 1 - response 1`] = `
Object {
  "payload": Object {
    "foo": "bar",
  },
  "type": "SECOND_COMPLETE",
}
`;

exports[`automatically infer non action object to be payload: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`automatically infer non action object to be payload: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`automatically infer non action object to be payload: 1 - routes - SECOND - onComplete 1`] = `1`;

exports[`automatically infer non action object to be payload: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`automatically infer non action object to be payload: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND_COMPLETE - {\\"foo\\":\\"bar\\"}",
}
`;

exports[`automatically infer non action object to be payload: 1 - title 1`] = `"SECOND"`;
